[gd_scene load_steps=3 format=3 uid="uid://dl8yrlv87dcey"]

[ext_resource type="Script" path="res://scripts/LevelUpScreen.gd" id="1_p9q8s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1v2h5"]
bg_color = Color(0.1, 0.1, 0.15, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.4, 0.4, 0.6, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="LevelUpScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p9q8s")

[node name="FadeOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1v2h5")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer/TitleContainer"]
layout_mode = 2
text = "LEVEL UP!"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 36

[node name="LevelLabel" type="Label" parent="Panel/VBoxContainer/TitleContainer"]
layout_mode = 2
text = "Level 2"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 18

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="UpgradeLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Choose an upgrade:"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 16

[node name="UpgradeContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TooltipPanel" type="Panel" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -100.0
offset_right = 320.0
offset_bottom = 100.0
grow_horizontal = 0
grow_vertical = 2

[node name="TooltipLabel" type="RichTextLabel" parent="Panel/TooltipPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "Detailed tooltip information goes here"
fit_content = true

[node name="UpgradeButton1" type="Panel" parent="Panel/VBoxContainer/UpgradeContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_vertical = 3

[node name="UpgradeCard1" type="Button" parent="Panel/VBoxContainer/UpgradeContainer/UpgradeButton1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "‚ö° Spell Power
+25% Spell Damage"
theme_override_font_sizes/font_size = 14
flat = true

[node name="ProgressBarBG" type="ColorRect" parent="Panel/VBoxContainer/UpgradeContainer/UpgradeButton1"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -6.0
grow_horizontal = 2
color = Color(0.2, 0.2, 0.3, 0.8)

[node name="ProgressBar" type="ColorRect" parent="Panel/VBoxContainer/UpgradeContainer/UpgradeButton1/ProgressBarBG"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
anchor_right = 0.5
grow_vertical = 2
color = Color(0.4, 0.7, 1, 0.8)

[node name="UpgradeButton2" type="Panel" parent="Panel/VBoxContainer/UpgradeContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_vertical = 3

[node name="UpgradeCard2" type="Button" parent="Panel/VBoxContainer/UpgradeContainer/UpgradeButton2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "‚è±Ô∏è Quick Cast
+20% Cast Speed"
theme_override_font_sizes/font_size = 14
flat = true

[node name="ProgressBarBG" type="ColorRect" parent="Panel/VBoxContainer/UpgradeContainer/UpgradeButton2"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -6.0
grow_horizontal = 2
color = Color(0.2, 0.2, 0.3, 0.8)

[node name="ProgressBar" type="ColorRect" parent="Panel/VBoxContainer/UpgradeContainer/UpgradeButton2/ProgressBarBG"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
anchor_right = 0.3
grow_vertical = 2
color = Color(1, 0.6, 0.2, 0.8)

[node name="UpgradeButton3" type="Panel" parent="Panel/VBoxContainer/UpgradeContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_vertical = 3

[node name="UpgradeCard3" type="Button" parent="Panel/VBoxContainer/UpgradeContainer/UpgradeButton3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "üí® Swift Step
+15% Movement Speed"
theme_override_font_sizes/font_size = 14
flat = true

[node name="ProgressBarBG" type="ColorRect" parent="Panel/VBoxContainer/UpgradeContainer/UpgradeButton3"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -6.0
grow_horizontal = 2
color = Color(0.2, 0.2, 0.3, 0.8)

[node name="ProgressBar" type="ColorRect" parent="Panel/VBoxContainer/UpgradeContainer/UpgradeButton3/ProgressBarBG"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
anchor_right = 0.7
grow_vertical = 2
color = Color(0.2, 1, 0.4, 0.8)

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="RerollActionsContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RerollButton" type="Button" parent="Panel/VBoxContainer/RerollActionsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "üé≤ Reroll (5)"
tooltip_text = "Reroll all non-locked upgrades"

[node name="BanishButton" type="Button" parent="Panel/VBoxContainer/RerollActionsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "üö´ Banish (5)"
tooltip_text = "Right-click upgrade to banish it forever"

[node name="LockButton" type="Button" parent="Panel/VBoxContainer/RerollActionsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "üîí Lock (5)"
tooltip_text = "Right-click upgrade to lock it for rerolls"